--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -1192,17 +1192,12 @@ Be as specific or as general as you like: from Love Life to Fitness, to Diet to 
                                                     </mask>
                                                 </variation>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JJL-Qk-mum">
-                                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="QML-KU-ALt" firstAttribute="top" secondItem="lm3-Ex-hrF" secondAttribute="bottom" id="1eZ-BJ-BYg"/>
                                             <constraint firstItem="dWB-1p-IoJ" firstAttribute="leading" secondItem="018-yl-xAk" secondAttribute="leading" id="3IO-I3-Zpb"/>
                                             <constraint firstItem="IJM-To-V3s" firstAttribute="height" secondItem="iBh-85-CnX" secondAttribute="height" id="5Gp-w5-r2e"/>
-                                            <constraint firstAttribute="bottom" secondItem="JJL-Qk-mum" secondAttribute="bottom" id="5f2-nC-lUb"/>
                                             <constraint firstAttribute="trailing" secondItem="dWB-1p-IoJ" secondAttribute="trailing" id="8KY-aW-E49"/>
                                             <constraint firstAttribute="trailing" secondItem="QML-KU-ALt" secondAttribute="trailing" id="8hd-H9-vIX"/>
                                             <constraint firstItem="2W9-eU-boJ" firstAttribute="height" secondItem="iBh-85-CnX" secondAttribute="height" id="9Bk-K4-Sqj"/>
@@ -1216,25 +1211,23 @@ Be as specific or as general as you like: from Love Life to Fitness, to Diet to 
                                             <constraint firstItem="iBh-85-CnX" firstAttribute="leading" secondItem="018-yl-xAk" secondAttribute="leading" id="FVm-gG-SVk"/>
                                             <constraint firstItem="iBh-85-CnX" firstAttribute="top" secondItem="IJM-To-V3s" secondAttribute="bottom" id="GFi-wY-wz4"/>
                                             <constraint firstItem="dWB-1p-IoJ" firstAttribute="top" secondItem="2W9-eU-boJ" secondAttribute="bottom" id="GuO-lb-kxm"/>
-                                            <constraint firstAttribute="height" constant="5600" id="HCf-ao-e0e"/>
+                                            <constraint firstAttribute="height" constant="5600" id="HCf-ao-e0e">
+                                                <variation key="heightClass=regular-widthClass=compact" constant="4800"/>
+                                            </constraint>
                                             <constraint firstItem="IJM-To-V3s" firstAttribute="top" secondItem="018-yl-xAk" secondAttribute="top" id="JPq-Hq-BkI"/>
-                                            <constraint firstItem="JJL-Qk-mum" firstAttribute="top" secondItem="dWB-1p-IoJ" secondAttribute="bottom" id="O6t-o3-XU4"/>
                                             <constraint firstItem="2W9-eU-boJ" firstAttribute="top" secondItem="QML-KU-ALt" secondAttribute="bottom" id="O9e-Sg-a2K"/>
                                             <constraint firstAttribute="trailing" secondItem="iBh-85-CnX" secondAttribute="trailing" id="PRB-7V-aNR"/>
                                             <constraint firstItem="2W9-eU-boJ" firstAttribute="leading" secondItem="018-yl-xAk" secondAttribute="leading" id="WZY-px-3Yw"/>
+                                            <constraint firstAttribute="bottom" secondItem="dWB-1p-IoJ" secondAttribute="bottom" id="aOZ-vf-6gn"/>
                                             <constraint firstItem="2W9-eU-boJ" firstAttribute="height" secondItem="QML-KU-ALt" secondAttribute="height" id="c3o-R7-ATb"/>
                                             <constraint firstItem="iBh-85-CnX" firstAttribute="top" secondItem="IJM-To-V3s" secondAttribute="bottom" id="ckT-Sx-c37"/>
-                                            <constraint firstItem="JJL-Qk-mum" firstAttribute="top" secondItem="dWB-1p-IoJ" secondAttribute="bottom" id="eH6-Q3-1VP"/>
                                             <constraint firstAttribute="bottom" secondItem="iBh-85-CnX" secondAttribute="bottom" id="eo0-Ve-7eh"/>
                                             <constraint firstItem="IJM-To-V3s" firstAttribute="leading" secondItem="018-yl-xAk" secondAttribute="leading" id="fID-VU-oDx"/>
                                             <constraint firstItem="IJM-To-V3s" firstAttribute="leading" secondItem="018-yl-xAk" secondAttribute="leading" id="hNq-Mt-7Kq"/>
-                                            <constraint firstItem="JJL-Qk-mum" firstAttribute="leading" secondItem="018-yl-xAk" secondAttribute="leading" id="heD-xg-0kJ"/>
                                             <constraint firstAttribute="trailing" secondItem="2W9-eU-boJ" secondAttribute="trailing" id="kg1-4R-oiZ"/>
-                                            <constraint firstItem="2W9-eU-boJ" firstAttribute="height" secondItem="JJL-Qk-mum" secondAttribute="height" id="kp0-bj-e8V"/>
                                             <constraint firstItem="dWB-1p-IoJ" firstAttribute="top" secondItem="2W9-eU-boJ" secondAttribute="bottom" id="o81-Ea-ocA"/>
                                             <constraint firstItem="2W9-eU-boJ" firstAttribute="height" secondItem="dWB-1p-IoJ" secondAttribute="height" id="qhF-5m-jJP"/>
                                             <constraint firstItem="iBh-85-CnX" firstAttribute="top" secondItem="IJM-To-V3s" secondAttribute="bottom" id="rgU-Xd-1X4"/>
-                                            <constraint firstAttribute="trailing" secondItem="JJL-Qk-mum" secondAttribute="trailing" id="ulr-WU-3yR"/>
                                             <constraint firstAttribute="trailing" secondItem="lm3-Ex-hrF" secondAttribute="trailing" id="v1J-NP-gQJ"/>
                                             <constraint firstItem="lm3-Ex-hrF" firstAttribute="leading" secondItem="018-yl-xAk" secondAttribute="leading" id="wD7-w4-3Ag"/>
                                             <constraint firstItem="2W9-eU-boJ" firstAttribute="height" secondItem="lm3-Ex-hrF" secondAttribute="height" id="xu1-4n-lOr"/>
@@ -1248,7 +1241,6 @@ Be as specific or as general as you like: from Love Life to Fitness, to Diet to 
                                                 <exclude reference="QML-KU-ALt"/>
                                                 <exclude reference="2W9-eU-boJ"/>
                                                 <exclude reference="dWB-1p-IoJ"/>
-                                                <exclude reference="JJL-Qk-mum"/>
                                             </mask>
                                             <mask key="constraints">
                                                 <exclude reference="Az5-hq-w1U"/>
@@ -1260,7 +1252,6 @@ Be as specific or as general as you like: from Love Life to Fitness, to Diet to 
                                                 <exclude reference="WZY-px-3Yw"/>
                                                 <exclude reference="c3o-R7-ATb"/>
                                                 <exclude reference="kg1-4R-oiZ"/>
-                                                <exclude reference="kp0-bj-e8V"/>
                                                 <exclude reference="qhF-5m-jJP"/>
                                                 <exclude reference="xu1-4n-lOr"/>
                                                 <exclude reference="5Gp-w5-r2e"/>
@@ -1269,11 +1260,6 @@ Be as specific or as general as you like: from Love Life to Fitness, to Diet to 
                                                 <exclude reference="JPq-Hq-BkI"/>
                                                 <exclude reference="fID-VU-oDx"/>
                                                 <exclude reference="hNq-Mt-7Kq"/>
-                                                <exclude reference="5f2-nC-lUb"/>
-                                                <exclude reference="O6t-o3-XU4"/>
-                                                <exclude reference="eH6-Q3-1VP"/>
-                                                <exclude reference="heD-xg-0kJ"/>
-                                                <exclude reference="ulr-WU-3yR"/>
                                                 <exclude reference="1eZ-BJ-BYg"/>
                                                 <exclude reference="8hd-H9-vIX"/>
                                                 <exclude reference="APy-2M-XdU"/>
@@ -1281,6 +1267,7 @@ Be as specific or as general as you like: from Love Life to Fitness, to Diet to 
                                                 <exclude reference="3IO-I3-Zpb"/>
                                                 <exclude reference="8KY-aW-E49"/>
                                                 <exclude reference="GuO-lb-kxm"/>
+                                                <exclude reference="aOZ-vf-6gn"/>
                                                 <exclude reference="o81-Ea-ocA"/>
                                                 <exclude reference="FVm-gG-SVk"/>
                                                 <exclude reference="GFi-wY-wz4"/>
@@ -1301,7 +1288,6 @@ Be as specific or as general as you like: from Love Life to Fitness, to Diet to 
                                                 <include reference="QML-KU-ALt"/>
                                                 <include reference="2W9-eU-boJ"/>
                                                 <include reference="dWB-1p-IoJ"/>
-                                                <include reference="JJL-Qk-mum"/>
                                             </mask>
                                             <mask key="constraints">
                                                 <include reference="Az5-hq-w1U"/>
@@ -1313,7 +1299,6 @@ Be as specific or as general as you like: from Love Life to Fitness, to Diet to 
                                                 <include reference="WZY-px-3Yw"/>
                                                 <include reference="c3o-R7-ATb"/>
                                                 <include reference="kg1-4R-oiZ"/>
-                                                <include reference="kp0-bj-e8V"/>
                                                 <include reference="qhF-5m-jJP"/>
                                                 <include reference="xu1-4n-lOr"/>
                                                 <exclude reference="5Gp-w5-r2e"/>
@@ -1322,18 +1307,14 @@ Be as specific or as general as you like: from Love Life to Fitness, to Diet to 
                                                 <exclude reference="JPq-Hq-BkI"/>
                                                 <exclude reference="fID-VU-oDx"/>
                                                 <include reference="hNq-Mt-7Kq"/>
-                                                <include reference="5f2-nC-lUb"/>
-                                                <include reference="O6t-o3-XU4"/>
-                                                <include reference="eH6-Q3-1VP"/>
-                                                <include reference="heD-xg-0kJ"/>
-                                                <include reference="ulr-WU-3yR"/>
                                                 <include reference="1eZ-BJ-BYg"/>
                                                 <include reference="8hd-H9-vIX"/>
                                                 <include reference="APy-2M-XdU"/>
                                                 <include reference="EZR-CO-JlK"/>
                                                 <include reference="3IO-I3-Zpb"/>
                                                 <include reference="8KY-aW-E49"/>
-                                                <include reference="GuO-lb-kxm"/>
+                                                <exclude reference="GuO-lb-kxm"/>
+                                                <include reference="aOZ-vf-6gn"/>
                                                 <include reference="o81-Ea-ocA"/>
                                                 <include reference="FVm-gG-SVk"/>
                                                 <exclude reference="GFi-wY-wz4"/>
@@ -1378,7 +1359,7 @@ Be as specific or as general as you like: from Love Life to Fitness, to Diet to 
                                 </variation>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" red="0.56154984944632802" green="0.81481450584152493" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="3Vf-8K-X6n" firstAttribute="bottom" secondItem="lZP-zk-Wtj" secondAttribute="top" id="3NS-Ol-BaJ"/>
                             <constraint firstAttribute="trailing" secondItem="3Vf-8K-X6n" secondAttribute="trailing" id="AuO-OO-Tbg"/>
