--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                                 </variation>
                                             </view>
                                         </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="centerX" secondItem="fhD-kS-Xfa" secondAttribute="centerX" id="KVI-hY-BX8"/>
                                             <constraint firstAttribute="width" secondItem="l2S-iq-kEm" secondAttribute="height" multiplier="1:1" id="ZR4-sa-FzT"/>
@@ -80,7 +80,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="1" alpha="0.62" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="centerX" secondItem="l2S-iq-kEm" secondAttribute="centerX" id="1XL-Iy-oij"/>
                                     <constraint firstAttribute="width" constant="400" id="SMc-uo-EOu"/>
@@ -134,7 +134,7 @@
                                         </variation>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.1491279987373737" green="0.1491279987373737" blue="0.1491279987373737" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="j7q-yF-P8P"/>
                                 </constraints>
@@ -179,6 +179,7 @@
                                 <exclude reference="THm-LS-P10"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="Aam-Ld-Bwn"/>
                                 <exclude reference="2LN-6X-Sqd"/>
                                 <exclude reference="f6f-he-fyE"/>
                                 <exclude reference="m9V-NO-cqI"/>
@@ -186,7 +187,6 @@
                                 <exclude reference="ZYf-cB-roT"/>
                                 <exclude reference="axJ-gn-KJK"/>
                                 <exclude reference="duO-PQ-xt7"/>
-                                <exclude reference="Aam-Ld-Bwn"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -195,6 +195,7 @@
                                 <include reference="THm-LS-P10"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="Aam-Ld-Bwn"/>
                                 <include reference="2LN-6X-Sqd"/>
                                 <include reference="f6f-he-fyE"/>
                                 <include reference="m9V-NO-cqI"/>
@@ -202,7 +203,6 @@
                                 <include reference="ZYf-cB-roT"/>
                                 <include reference="axJ-gn-KJK"/>
                                 <include reference="duO-PQ-xt7"/>
-                                <include reference="Aam-Ld-Bwn"/>
                             </mask>
                         </variation>
                     </view>
@@ -1711,12 +1711,12 @@ that day etc</string>
                                                         <exclude reference="O7Y-eu-2tr"/>
                                                         <exclude reference="h9e-PN-Ryf"/>
                                                         <exclude reference="yk3-Of-kIF"/>
-                                                        <exclude reference="Kee-kz-Mco"/>
-                                                        <exclude reference="WxW-P1-1zr"/>
-                                                        <exclude reference="b7R-lb-JJv"/>
                                                         <exclude reference="OPU-4Z-fOH"/>
                                                         <exclude reference="mcT-Hp-eHB"/>
                                                         <exclude reference="xF3-Us-EOl"/>
+                                                        <exclude reference="Kee-kz-Mco"/>
+                                                        <exclude reference="WxW-P1-1zr"/>
+                                                        <exclude reference="b7R-lb-JJv"/>
                                                     </mask>
                                                 </variation>
                                                 <variation key="heightClass=regular-widthClass=compact">
@@ -1730,12 +1730,12 @@ that day etc</string>
                                                         <include reference="O7Y-eu-2tr"/>
                                                         <include reference="h9e-PN-Ryf"/>
                                                         <include reference="yk3-Of-kIF"/>
-                                                        <include reference="Kee-kz-Mco"/>
-                                                        <include reference="WxW-P1-1zr"/>
-                                                        <include reference="b7R-lb-JJv"/>
                                                         <include reference="OPU-4Z-fOH"/>
                                                         <include reference="mcT-Hp-eHB"/>
                                                         <include reference="xF3-Us-EOl"/>
+                                                        <include reference="Kee-kz-Mco"/>
+                                                        <include reference="WxW-P1-1zr"/>
+                                                        <include reference="b7R-lb-JJv"/>
                                                     </mask>
                                                 </variation>
                                             </view>
@@ -1961,10 +1961,6 @@ We have set you up with a few core categories to get you started: Lifestyle, Sel
                                                         <exclude reference="IcV-Em-5jw"/>
                                                     </mask>
                                                     <mask key="constraints">
-                                                        <exclude reference="CrL-KS-SUb"/>
-                                                        <exclude reference="TWh-Kg-LNw"/>
-                                                        <exclude reference="XQR-Ik-1Wm"/>
-                                                        <exclude reference="yJL-kw-0KH"/>
                                                         <exclude reference="EKu-VV-gCF"/>
                                                         <exclude reference="ea0-Q3-3o6"/>
                                                         <exclude reference="xRf-US-ryK"/>
@@ -1976,10 +1972,6 @@ We have set you up with a few core categories to get you started: Lifestyle, Sel
                                                         <include reference="IcV-Em-5jw"/>
                                                     </mask>
                                                     <mask key="constraints">
-                                                        <include reference="CrL-KS-SUb"/>
-                                                        <include reference="TWh-Kg-LNw"/>
-                                                        <include reference="XQR-Ik-1Wm"/>
-                                                        <include reference="yJL-kw-0KH"/>
                                                         <include reference="EKu-VV-gCF"/>
                                                         <include reference="ea0-Q3-3o6"/>
                                                         <include reference="xRf-US-ryK"/>
@@ -2043,31 +2035,6 @@ We have set you up with a few core categories to get you started: Lifestyle, Sel
                                             <mask key="constraints">
                                                 <exclude reference="Az5-hq-w1U"/>
                                                 <exclude reference="HCf-ao-e0e"/>
-                                                <exclude reference="5Gp-w5-r2e"/>
-                                                <exclude reference="C40-L4-0pJ"/>
-                                                <exclude reference="EEJ-VE-W5F"/>
-                                                <exclude reference="JPq-Hq-BkI"/>
-                                                <exclude reference="fID-VU-oDx"/>
-                                                <exclude reference="hNq-Mt-7Kq"/>
-                                                <exclude reference="FVm-gG-SVk"/>
-                                                <exclude reference="GFi-wY-wz4"/>
-                                                <exclude reference="PRB-7V-aNR"/>
-                                                <exclude reference="ckT-Sx-c37"/>
-                                                <exclude reference="eo0-Ve-7eh"/>
-                                                <exclude reference="rgU-Xd-1X4"/>
-                                                <exclude reference="v1J-NP-gQJ"/>
-                                                <exclude reference="wD7-w4-3Ag"/>
-                                                <exclude reference="zXw-SJ-D8s"/>
-                                                <exclude reference="1eZ-BJ-BYg"/>
-                                                <exclude reference="8hd-H9-vIX"/>
-                                                <exclude reference="APy-2M-XdU"/>
-                                                <exclude reference="EZR-CO-JlK"/>
-                                                <exclude reference="0YD-jz-MOO"/>
-                                                <exclude reference="3IO-I3-Zpb"/>
-                                                <exclude reference="8KY-aW-E49"/>
-                                                <exclude reference="GuO-lb-kxm"/>
-                                                <exclude reference="aOZ-vf-6gn"/>
-                                                <exclude reference="o81-Ea-ocA"/>
                                                 <exclude reference="9Bk-K4-Sqj"/>
                                                 <exclude reference="Cfq-9P-cs0"/>
                                                 <exclude reference="EVU-7x-nBh"/>
@@ -2080,6 +2047,31 @@ We have set you up with a few core categories to get you started: Lifestyle, Sel
                                                 <exclude reference="rdR-z5-l7b"/>
                                                 <exclude reference="tSn-XU-3C1"/>
                                                 <exclude reference="xu1-4n-lOr"/>
+                                                <exclude reference="5Gp-w5-r2e"/>
+                                                <exclude reference="C40-L4-0pJ"/>
+                                                <exclude reference="EEJ-VE-W5F"/>
+                                                <exclude reference="JPq-Hq-BkI"/>
+                                                <exclude reference="fID-VU-oDx"/>
+                                                <exclude reference="hNq-Mt-7Kq"/>
+                                                <exclude reference="1eZ-BJ-BYg"/>
+                                                <exclude reference="8hd-H9-vIX"/>
+                                                <exclude reference="APy-2M-XdU"/>
+                                                <exclude reference="EZR-CO-JlK"/>
+                                                <exclude reference="0YD-jz-MOO"/>
+                                                <exclude reference="3IO-I3-Zpb"/>
+                                                <exclude reference="8KY-aW-E49"/>
+                                                <exclude reference="GuO-lb-kxm"/>
+                                                <exclude reference="aOZ-vf-6gn"/>
+                                                <exclude reference="o81-Ea-ocA"/>
+                                                <exclude reference="FVm-gG-SVk"/>
+                                                <exclude reference="GFi-wY-wz4"/>
+                                                <exclude reference="PRB-7V-aNR"/>
+                                                <exclude reference="ckT-Sx-c37"/>
+                                                <exclude reference="eo0-Ve-7eh"/>
+                                                <exclude reference="rgU-Xd-1X4"/>
+                                                <exclude reference="v1J-NP-gQJ"/>
+                                                <exclude reference="wD7-w4-3Ag"/>
+                                                <exclude reference="zXw-SJ-D8s"/>
                                             </mask>
                                         </variation>
                                         <variation key="heightClass=regular-widthClass=compact">
@@ -2094,31 +2086,6 @@ We have set you up with a few core categories to get you started: Lifestyle, Sel
                                             <mask key="constraints">
                                                 <include reference="Az5-hq-w1U"/>
                                                 <include reference="HCf-ao-e0e"/>
-                                                <exclude reference="5Gp-w5-r2e"/>
-                                                <include reference="C40-L4-0pJ"/>
-                                                <include reference="EEJ-VE-W5F"/>
-                                                <exclude reference="JPq-Hq-BkI"/>
-                                                <exclude reference="fID-VU-oDx"/>
-                                                <include reference="hNq-Mt-7Kq"/>
-                                                <include reference="FVm-gG-SVk"/>
-                                                <exclude reference="GFi-wY-wz4"/>
-                                                <include reference="PRB-7V-aNR"/>
-                                                <include reference="ckT-Sx-c37"/>
-                                                <exclude reference="eo0-Ve-7eh"/>
-                                                <exclude reference="rgU-Xd-1X4"/>
-                                                <include reference="v1J-NP-gQJ"/>
-                                                <include reference="wD7-w4-3Ag"/>
-                                                <include reference="zXw-SJ-D8s"/>
-                                                <include reference="1eZ-BJ-BYg"/>
-                                                <include reference="8hd-H9-vIX"/>
-                                                <include reference="APy-2M-XdU"/>
-                                                <include reference="EZR-CO-JlK"/>
-                                                <include reference="0YD-jz-MOO"/>
-                                                <include reference="3IO-I3-Zpb"/>
-                                                <include reference="8KY-aW-E49"/>
-                                                <exclude reference="GuO-lb-kxm"/>
-                                                <exclude reference="aOZ-vf-6gn"/>
-                                                <exclude reference="o81-Ea-ocA"/>
                                                 <include reference="9Bk-K4-Sqj"/>
                                                 <exclude reference="Cfq-9P-cs0"/>
                                                 <include reference="EVU-7x-nBh"/>
@@ -2131,6 +2098,31 @@ We have set you up with a few core categories to get you started: Lifestyle, Sel
                                                 <exclude reference="rdR-z5-l7b"/>
                                                 <include reference="tSn-XU-3C1"/>
                                                 <include reference="xu1-4n-lOr"/>
+                                                <exclude reference="5Gp-w5-r2e"/>
+                                                <include reference="C40-L4-0pJ"/>
+                                                <include reference="EEJ-VE-W5F"/>
+                                                <exclude reference="JPq-Hq-BkI"/>
+                                                <exclude reference="fID-VU-oDx"/>
+                                                <include reference="hNq-Mt-7Kq"/>
+                                                <include reference="1eZ-BJ-BYg"/>
+                                                <include reference="8hd-H9-vIX"/>
+                                                <include reference="APy-2M-XdU"/>
+                                                <include reference="EZR-CO-JlK"/>
+                                                <include reference="0YD-jz-MOO"/>
+                                                <include reference="3IO-I3-Zpb"/>
+                                                <include reference="8KY-aW-E49"/>
+                                                <exclude reference="GuO-lb-kxm"/>
+                                                <exclude reference="aOZ-vf-6gn"/>
+                                                <exclude reference="o81-Ea-ocA"/>
+                                                <include reference="FVm-gG-SVk"/>
+                                                <exclude reference="GFi-wY-wz4"/>
+                                                <include reference="PRB-7V-aNR"/>
+                                                <include reference="ckT-Sx-c37"/>
+                                                <exclude reference="eo0-Ve-7eh"/>
+                                                <exclude reference="rgU-Xd-1X4"/>
+                                                <include reference="v1J-NP-gQJ"/>
+                                                <include reference="wD7-w4-3Ag"/>
+                                                <include reference="zXw-SJ-D8s"/>
                                             </mask>
                                         </variation>
                                     </view>
